--- a/static/css/home_style.css
+++ b/static/css/home_style.css
@@ -2,7 +2,7 @@ html, body {
     height:100%;
     padding: 0;
     margin: 0;
-    color: white;
+    color: rgb(255, 255, 255);
   }
 html{
     background-image: url('../img/a.jpeg');
