--- a/templates/home.html
+++ b/templates/home.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col">
             <div id="home-content">
-                <h1>정보 사이트!</h1>
+                <h1>제주제일고 설문조사 사이트!</h1>
                 <h3>아직 개발중입니다!</h3>
                 <hr>
                 <a class="btn btn-light btn-lg" href="{% url 'polls:list' %}" role="button">바로시작!</a>
