--- a/polls/templates/polls/polls_list.html
+++ b/polls/templates/polls/polls_list.html
@@ -1,23 +1,10 @@
 {% extends 'base.html' %}
 
 {% block content %}
-
 <div class="container">
     <div class="row">
         <div class="col-md-8 offset-sm-2">
-            <img class="fit-picture" src="/static/img/제목 없음.jpg" alt="월별 계획" width="1213" height="839">
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
-            <br>
+            <h1 class="text-center mt-3 mb-3">글들의 목록입니다.</h1>
             {% if messages %}
             <div class="messages">
                 {% for message in messages %}
@@ -30,6 +17,13 @@
             </div>
             {% endif %}
 
+            <a class="btn btn-{% if 'name' in request.GET %}warning{% else %}primary{% endif %} mb-3" href="?name=True"
+                role="button"><i class="fas fa-sort-alpha-down"></i>
+                이름순</a>
+            <a class="btn btn-{% if 'date' in request.GET %}warning{% else %}primary{% endif %} mb-3" href="?date=True"
+                role="button"><i class="far fa-clock"></i> 날짜순</a>
+            <a class="btn btn-{% if 'vote' in request.GET %}warning{% else %}primary{% endif %} mb-3" href="?vote=True"
+                role="button"><i class="fas fa-poll"></i> 투표순</a>
 
             <a class="btn btn-primary mb-3 float-right" href="{% url 'polls:add' %}" role="button">추가하기 <i class="fas fa-plus"></i></a>
 
@@ -40,7 +34,6 @@
                 <button type="submit" class="btn btn-primary mb-2"><i class="fas fa-search"></i></button>
             </form>
 
-            <div class="listsss">
 
             <ul class="list-group">
                 {% for poll in polls %}
@@ -61,9 +54,6 @@
 
                 {% endfor %}
             </ul>
-            
-            </div>
-
             <nav class="mt-3">
                 <ul class="pagination">
                     {% if polls.has_previous %}
