--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,32 +1,36 @@
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
+    
     <a class="navbar-brand" href="{% url 'home' %}"><i class="fas fa-person-booth"></i></a>
+
     <button class="navbar-toggler d-lg-none" type="button" data-toggle="collapse" data-target="#collapsibleNavId"
+
         aria-controls="collapsibleNavId" aria-expanded="false" aria-label="Toggle navigation">
+
         <span class="navbar-toggler-icon"></span>
+        
     </button>
+
+
     <div class="collapse navbar-collapse" id="collapsibleNavId">
+
         <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'home' %}">홈 화면 <span class="sr-only">(current)</span></a>
             </li>
+
             {% if request.user.is_authenticated %}
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'polls:list' %}">게시판</a>
-            </li>
-<!--테스트-->
-            <li class="nav-item">
-                <a class="nav-link" href="https://jeil.jje.hs.kr/jeil-h/19255/food">급식</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://jeil.jje.hs.kr/jeil-h/0208/board/16996">시간표</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="https://jeil.jje.hs.kr/jeil-h/0208/board/16996">일정</a>
-            </li>
-<!--테스트-->
+
+
             {% endif %}
+
         </ul>
-        <div class="navbar-nav ml-auto">
+
+
+
+
+        <div class="navbar-nav ms-auto">
+
             {% if request.user.is_authenticated %}
             <a class="nav-link" href="{% url 'polls:list_by_user' %}">나의 설문조사들</a>
             <a class="nav-link" href="{% url 'accounts:logout' %}">로그아웃</a>
@@ -34,6 +38,13 @@
             <a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
             <a class="nav-link" href="{% url 'accounts:register' %}">회원가입</a>
             {% endif %}
+            
+
         </div>
+
+
+
+
+
     </div>
 </nav>
