--- a/templates/base.html
+++ b/templates/base.html
@@ -26,7 +26,7 @@
         body {
             background: rgb(58, 57, 57);
             color: white;
-        
+            height: 10000px;
         }
 
   
@@ -80,8 +80,6 @@
             width: 100vw;
         }
 
-
-
     </style>
 
     {% block custom_css %}{% endblock custom_css %}
@@ -90,18 +88,6 @@
 
 
 <body>
-    {% include 'includes/navbar.html' %}
-    
-    {% include 'includes/sidebar.html' %}
-    {% block content %}
-    {% endblock content %}
-
-    <!-- All javascript files goes under here    -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-
-
     <script>
         var x = document.createElement("iframe");
         
@@ -214,11 +200,40 @@
             document.getElementsByClassName("iframeprinter")[0].appendChild(x);
         }
     
+
+
+
+
+        function getShow(){
+            alert("보이기");
+            document.getElementById("sidebar").style.display = "block";
+        }
+
+        function getHide(){
+            alert("숨기기");
+            document.getElementById("sidebar").style.display = "none";
+	
+        }
+
     </script>
+
+    {% include 'includes/navbar.html' %}
+    
+    {% include 'includes/sidebar.html' %}
+    {% block content %}
+    {% endblock content %}
+
+    <!-- All javascript files goes under here    -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+
+    
 
 
     <div class="iframeprinter">
-
+    
     </div>
 
 </body>
