--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -24,13 +24,9 @@
         <div class="navbar-nav ms-auto">
 
             {% if request.user.is_authenticated %}
-            <button class="favorite styled" type="button" onClick="getShow()">사이드바 켜기</button>
-            <button class="favorite styled" type="button" onClick="getHide()">사이드바 끄기</button>
             <a class="nav-link" href="{% url 'polls:list_by_user' %}">나의 설문조사들</a>
             <a class="nav-link" href="{% url 'accounts:logout' %}">로그아웃</a>
             {% else %}
-            <button class="favorite styled" type="button" onClick="getShow()">사이드바 켜기</button>
-            <button class="favorite styled" type="button" onClick="getHide()">사이드바 끄기</button>
             <a class="nav-link" href="{% url 'accounts:login' %}">로그인</a>
             <a class="nav-link" href="{% url 'accounts:register' %}">회원가입</a>
             {% endif %}
@@ -43,4 +39,8 @@
 
 
     </div>
+    {% if request.user.is_authenticated %}
+    <button class="favorite styled" type="button" onClick="getShow()">사이드바 켜기</button>
+    <button class="favorite styled" type="button" onClick="getHide()">사이드바 끄기</button>
+    {% endif %}
 </nav>
